--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,56 +1,29 @@
-version: v1.0
-name: First pipeline example
-agent:
-  machine:
-    type: e1-standard-2
-    os_image: ubuntu1804
-blocks:
-  - name: "Build"
-    task:
-      env_vars:
-        - name: APP_ENV
-          value: prod
-      jobs:
-      - name: Docker build
-        commands:
-          - checkout
-          - ls -1
-          - echo $APP_ENV
-          - echo "Docker build..."
-          - echo "done"
-  - name: "Smoke tests"
-    task:
-      jobs:
-      - name: Smoke
-        commands:
-          - checkout
-          - echo "make smoke"
-  - name: "Unit tests"
-    task:
-      jobs:
-      - name: RSpec
-        commands:
-          - checkout
-          - echo "make rspec"
-      - name: Lint code
-        commands:
-          - checkout
-          - echo "make lint"
-      - name: Check security
-        commands:
-          - checkout
-          - echo "make security"
-  - name: "Integration tests"
-    task:
-      jobs:
-      - name: Cucumber
-        commands:
-          - checkout
-          - echo "make cucumber"
-  - name: "Push Image"
-    task:
-      jobs:
-      - name: Push
-        commands:
-          - checkout
-          - echo "make docker.push"
+group: travis_latest
+language: python
+cache:
+  directories:
+    - $HOME/.cache/pip
+matrix:
+    include:
+        - python: 3.4
+          env: TOX_ENV=py34
+        - python: 3.5
+          env: TOX_ENV=py35,coverage
+        - python: 3.6
+          env: TOX_ENV=py36
+install:
+    - pip install -r test_requirements.txt
+before_script:
+    # stop the build if there are Python syntax errors or undefined names
+    - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+    # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+    - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+script:
+    # Check python install package
+    - pip3 install -e .
+    - tox -e $TOX_ENV
+    # Check python uninstall package
+    - pip3 uninstall -y algorithms
+notifications:
+    on_success: change
+    on_failure: change  # `always` will be the setting once code changes slow down
